force-app/main/default/objects/Publishing_House__c/Publishing_House__c.object-meta.xml
<CustomObject>
    <label>Publishing House</label>
    <nameField>
        <label>Publishing House Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publishing Houses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>