force-app/main/default/objects/Publishing_House__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Publishing House Books</relationshipLabel>
    <relationshipName>Publishing_House_Books</relationshipName>
    <type>Lookup</type>
</CustomField>