force-app/main/default/objects/Publishing_House__c/fields/Headquarters_Country__c.field-meta.xml
<CustomField>
    <fullName>Headquarters_Country__c</fullName>
    <label>Headquarters Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>