force-app/main/default/objects/Publishing_House__c/fields/Publishing_House_Title__c.field-meta.xml
<CustomField>
    <fullName>Publishing_House_Title__c</fullName>
    <label>Publishing House Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>