force-app/main/default/objects/Publishing_House__c/fields/Year_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Establishment__c</fullName>
    <label>Year of Establishment</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>